--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "formik": "^2.2.9",
     "husky": "^8.0.0",
     "typescript": "4.8.4"
   }
