--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@types/react": "18.0.21",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "formik": "^2.2.9",
     "husky": "^8.0.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
 }
