--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.8.5",
+    "formik": "2.2.9",
     "next": "12.3.1",
+    "postcss": "8.4.17",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
-    "@reduxjs/toolkit": "1.8.5",
-    "formik": "2.2.9",
-    "tailwindcss": "3.1.8",
-    "postcss": "8.4.17"
+    "reduce-reducers": "^1.0.4",
+    "tailwindcss": "3.1.8"
   },
   "devDependencies": {
     "yup": "0.32.11",
