--- a/package.json
+++ b/package.json
@@ -10,31 +10,29 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.4",
-    "classnames": "^2.3.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.4",
-    "uuid": "^9.0.0",
-    "yup": "^0.32.11"
+    "react-redux": "8.0.4",
+    "@reduxjs/toolkit": "1.8.5",
+    "formik": "2.2.9",
+    "tailwindcss": "3.1.8",
+    "postcss": "8.4.17"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@reduxjs/toolkit": "^1.8.5",
+    "yup": "0.32.11",
+    "classnames": "2.3.2",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-conventional": "17.1.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
-    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-beautiful-dnd": "13.1.2",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "formik": "^2.2.9",
-    "husky": "^8.0.0",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
+    "husky": "8.0.0",
     "typescript": "4.8.4"
   }
 }
