--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "1.8.5",
     "formik": "2.2.9",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "postcss": "8.4.17",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
