--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "tailwindcss": "3.1.8"
   },
   "devDependencies": {
-    "yup": "0.32.11",
-    "classnames": "2.3.2",
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@types/node": "18.7.23",
@@ -32,9 +30,11 @@
     "@types/react-beautiful-dnd": "13.1.2",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "10.4.12",
+    "classnames": "2.3.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "husky": "8.0.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "yup": "0.32.11"
   }
 }
