--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
     "@reduxjs/toolkit": "1.8.5",
     "formik": "2.2.9",
     "next": "12.3.1",
@@ -19,6 +20,7 @@
     "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
+    "react-toastify": "^9.0.8",
     "reduce-reducers": "^1.0.4",
     "tailwindcss": "3.1.8"
   },
